--- a/manifest.json
+++ b/manifest.json
@@ -9,18 +9,18 @@
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "images/pwa-icon-256.png",
+            "src": "images/icon-256x256.png",
             "sizes": "256x256",
             "type": "image/png"
         },
         {
-            "src": "images/pwa-icon-256.png",
+            "src": "images/icon-256x256.png",
             "sizes": "256x256",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "images/pwa-icon-512.png",
+            "src": "images/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
